--- a/templates/index.html
+++ b/templates/index.html
@@ -1,34 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/style.css">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Real-Time Forum</title>
+  <link rel="stylesheet" href="/static/style.css" />
 </head>
-
 <body>
-    <div id="register-page">
-        <h2>Register</h2>
-        <form id="register-form">
-            <input type="text" name="nickname" placeholder="Nickname" required><br>
-            <input type="text" name="first_name" placeholder="First Name" required><br>
-            <input type="text" name="last_name" placeholder="Last Name" required><br>
-            <input type="email" name="email" placeholder="Email" required><br>
-            <input type="password" name="password" placeholder="Password" required><br>
-            <input type="number" name="age" placeholder="Age" required><br>
-            <select name="gender" required>
-                <option value="">Select Gender</option>
-                <option value="male">Male</option>
-                <option value="female">Female</option>
-            </select><br>
-            <button type="submit">Register</button>
-        </form>
-        <div id="register-error" style="color:red;"></div>
-    </div>
-
-    <script src="/static/script.js"></script>
+  <div id="app">
+    
+  </div>
+  <script type="module" src="/static/app.js"></script>
 </body>
-
 </html>
